--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@babel/preset-env": "^7.22.14",
     "@babel/preset-react": "^7.22.5",
     "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
+    "style-loader": "^3.3.3",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
