[RWS-15] Adding react router

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,10 @@
     "jsx": "react",
     "esModuleInterop": true,
   },
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "typings.d.ts"
+  ],
   "exclude": ["node_modules"]
 }
