--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "jsx": "react",
     "esModuleInterop": true,
+    "moduleResolution": "node",
+    "module": "esnext",
   },
   "include": [
     "**/*.ts",
